Menu and Gallery crud operation completed

--- a/Restaurant/Nd/templates/Nd/Admin.html
+++ b/Restaurant/Nd/templates/Nd/Admin.html
@@ -1,9 +1,9 @@
-{% extends 'Ad_Main.html' %}
+{% extends 'AdMain.html' %}
 
 {% load static %}
 
 {% block title_link %}
-    <title>NamasteDaju Restaurant Stories</title>
+    <title>NamasteDaju Restaurant Admin</title>
 {% endblock %}
 
 {% block css_link %}
@@ -15,32 +15,32 @@
     <div class="container py-5" id="C1">
         <div class="row">
             <div class="col-sm mr-4 mb-4" id="C1R1">
-                <h1 class="text-center"><a href="">Menu</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_menu">Menu</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C1R2">
-                <h1 class="text-center"><a href="">Gallery</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_gallery">Gallery</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C1R3">
-                <h1 class="text-center"><a href="">Stories</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_stories">Stories</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C1R4">
-                <h1 class="text-center"><a href="">Order</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_order">Order</a></h1>
             </div>
         </div>
     </div>
     <div class="container py-5" id="C2">
         <div class="row">
             <div class="col-sm mr-4 mb-4" id="C2R1">
-                <h1 class="text-center"><a href="">Reservation</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_reservation">Reservation</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C2R2">
-                <h1 class="text-center"><a href="">Catering</a></h1>
+                <h1 class="text-center"><a href="/Nd/ad_catering">Catering</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C2R3">
-                <h1 class="text-center"><a href="">Message</a></h1>
+                <h1 class="text-center"><a href="/Nd/message">Message</a></h1>
             </div>
             <div class="col-sm mr-4 mb-4" id="C2R4">
-                <h1 class="text-center"><a href="">User</a></h1>
+                <h1 class="text-center"><a href="/Nd/user">User</a></h1>
             </div>
         </div>
     </div>
