Reservation Catering form completed in front end

--- a/Restaurant/Nd/templates/Nd/AdGallery.html
+++ b/Restaurant/Nd/templates/Nd/AdGallery.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="table-responsive" id="Table">
-            <table class="table table-striped mb-5" id="Images">
+            <table class="table table-striped" id="Images">
                 <thead class="thead-dark">
                     <tr>
                         <th>Name</th>
@@ -69,7 +69,11 @@
                 </tbody>
             </table>
         </div>
-      </div>
+    </div>
+
+    <div class="container-fluid d-flex justify-content-center py-2 mt-3" id="Copyright">
+        <p>Copyright ©2021 All rights reserved. Design by <a href="#">Gauri Shankar Sharma</a></p>
+    </div>
 {% endblock %}
 
 {% block script_link %}
