--- a/Restaurant/Nd/templates/Nd/AdMenu.html
+++ b/Restaurant/Nd/templates/Nd/AdMenu.html
@@ -204,7 +204,7 @@
                 </table>
             </div>
             <div class="table-responsive">
-                <table class="table table-striped mb-5" id="Drinks_Tea">
+                <table class="table table-striped" id="Drinks_Tea">
                     <h1 class="text-center" id="Dth1">Drinks & Tea</h1>
                     <thead class="thead-dark">
                         <tr>
@@ -236,7 +236,11 @@
                 </table>
             </div>
         </div>
-      </div>
+    </div>
+
+    <div class="container-fluid d-flex justify-content-center py-2 mt-3" id="Copyright">
+        <p>Copyright ©2021 All rights reserved. Design by <a href="#">Gauri Shankar Sharma</a></p>
+    </div>
 {% endblock %}
 
 {% block script_link %}
