--- a/Restaurant/Nd/templates/Nd/Home.html
+++ b/Restaurant/Nd/templates/Nd/Home.html
@@ -122,7 +122,7 @@
           <p class="pr-4 mb-0">About Us</p>
           <h1 class="font-weight-bold mb-3" id="ADh1">Best Cultural And Traditional Restaurant of Nepal</h1>
           <p class="mb-sm-4" id="ADp">
-            “NamasteDaju restaurant is nepal’s no.1 traditional and cultural restaurant form 1990 to till now. Everything we do is about you.
+            “NamasteDaju restaurant is Nepal’s no.1 traditional and cultural restaurant form 1990 to till now. Everything we do is about you.
             From chefs who create exciting new flavors, to crew members who know exactly how you want your drink – we prioritize what you need
             to get you on your way. We strive to keep you at your best, and we remain loyal to you, your tastes and your time. That’s what Nepali
             runs on. Do right and far exceed expectations daily. We do the right thing and lead by putting people first. Each and every connection
@@ -139,57 +139,57 @@
         </div>
         <div class="container-fluid d-lg-flex flex-row py-sm-5">
             <div class="container">
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <span class="fas fa-user Ssp mb-sm-3"></span>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <h3 class="font-weight-bold Sh3">Best Chef</h3>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <p class="Sp">We provide best chefs from all around the world for our customer flavors and taste.</p>
                 </div>
             </div>
             <div class="container">
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <span class="fa fa-utensils Ssp mb-sm-3"></span>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <h3 class="font-weight-bold Sh3">Healthy Food</h3>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <p class="Sp">Customer's health is our first priority. So we serves best quality and healthy food</p>
                 </div>
             </div>
             <div class="container">
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <span class="fas fa-truck Ssp mb-sm-3"></span>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <h3 class="font-weight-bold Sh3">Fastest Delivery</h3>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <p class="Sp">Customers within the city can get their ordered food within 20 minutes.</p>
                 </div>
             </div>
             <div class="container">
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <span class="fa fa-utensils Ssp mb-sm-3"></span>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <h3 class="font-weight-bold Sh3">Reservation</h3>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <p class="Sp">Customers can book tables for their private dinner and happy hours</p>
                 </div>
             </div>
             <div class="container">
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <span class="fa fa-birthday-cake Ssp mb-sm-3"></span>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <h3 class="font-weight-bold Sh3">Catering</h3>
                 </div>
-                <div class="container d-sm-flex justify-content-center">
+                <div class="container d-flex justify-content-center">
                     <p class="Sp">Customers can now deal with the restaurant for their important events.</p>
                 </div>
             </div>
