--- a/Restaurant/templates/Navbar.html
+++ b/Restaurant/templates/Navbar.html
@@ -1,4 +1,4 @@
-<span class="fa fa-angle-double-up font-weight-bold" id="TopScroll" onclick="ScrollUp()"></span>
+<span class="fa fa-angle-double-up" id="TopScroll" onclick="ScrollUp()"></span>
 
 <div class="container-fluid d-flex flex-row justify-content-between p-0 m" id="Header">
     <div class="container">
