--- a/Restaurant/Nd/templates/Nd/Stories.html
+++ b/Restaurant/Nd/templates/Nd/Stories.html
@@ -57,6 +57,28 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid d-flex flex-column py-5" id="Stories">
+        <div class="container d-flex justify-content-center py-sm-5" id="SH">
+          <h1>Read Our Daily Stories</h1>
+        </div>        
+        <div class="container-fluid" id="Sc">
+            <div class="row d-flex justify-content-center mb-5">
+                {% for i in key %}
+                <div class="col-5 d-flex flex-column mb-4 mr-5">
+                    <img class="img-fluid" src='/{{i.image}}'/>
+                    <div class="d-flex flex-column detail">
+                        <h2 class="mt-2 Sh2">{{i.name}}</h2>
+                        <h4  class="mt-2 Sh4"><span class="fa fa-calendar-alt mr-2"></span>{{i.uploaded_date}}</h4>
+                        <p class="mt-2 Sp">{{i.detail}}</p>
+                        <button class="btn font-weight-bold my-2 Sb1" onclick="more(this)">Read More</button>
+                        <button class="btn font-weight-bold my-2 Sb2" onclick="less(this)">Read Less</button>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
 
 {% block script_link %}
