--- a/Restaurant/static/css/Catering.css
+++ b/Restaurant/static/css/Catering.css
@@ -92,3 +92,94 @@
     color: rgb(0, 0, 187);
 }
 /*====================Front====================*/
+
+/*====================Catering====================*/
+#CH h1
+{
+    color: rgb(0, 0, 187);
+    font-family: 'Times New Roman', Times, serif;
+}
+.CD
+{
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px blue;
+}
+#CT .Csp
+{
+    font-size: 60px;
+}
+#CT .Ch3
+{
+    font-family: 'Times New Roman', Times, serif;
+}
+#CT .Cp
+{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-align: justify;
+}
+ul
+{
+    list-style-type: none;
+    padding-inline-start: 0px;
+    font-family: 'Times New Roman', Times, serif;
+}
+ul li
+{
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+ul li span
+{
+    color: blue;
+    font-size: 20px;
+    border-radius: 100%;
+    padding: 5px;
+    background-color: rgb(243, 239, 239);
+    margin-right: 10px;
+}
+/*====================Catering====================*/
+
+/*====================Card====================*/
+#Card h4, .help-block
+{
+    color: rgb(0, 187, 40);
+    font-family: cursive;
+}
+#Card
+{
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px blue;
+} 
+#Card label
+{
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+#Card input, #Card select
+{
+    background-image: linear-gradient( rgb(0, 0, 255, 0.1), rgb(0, 0, 255, 0.1) );
+    border-radius: 15px;
+}
+#Card input:hover, #Card select:hover
+{
+    border: 2px solid rgb(0, 0, 187);
+}
+#Card button
+{
+    color: white;
+    font-weight: bold;
+    background-color:blue;
+    border-radius: 10px;
+}
+#Card button:hover
+{
+    color: rgb(0, 0, 187);
+    background-color: transparent;
+    border: 2px solid rgb(0, 0, 187);
+}
+/*====================Card====================*/
+
+
+
