--- a/Restaurant/templates/AdNavbar.html
+++ b/Restaurant/templates/AdNavbar.html
@@ -1,41 +1,5 @@
-<span class="fa fa-angle-double-up font-weight-bold" id="TopScroll" onclick="ScrollUp()"></span>
+<span class="fa fa-angle-double-up" id="TopScroll" onclick="ScrollUp()"></span>
 
-<div class="container-fluid d-flex flex-row justify-content-between p-0 m" id="Header">
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <h1><a class="navbar-brand mr-lg-5 font-weight-bold" href="#">Namaste<span id="navbar_brand_span">Daju</span></a></h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{menu}} header_nav_link" href="/Nd/ad_menu">Menu <span class="sr-only">(current)</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                          <a class="nav-link font-weight-bold {{gallery}} header_nav_link" href="/Nd/ad_gallery">Gallery</a>
-                        </li>
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{stories}} header_nav_link" href="/Nd/ad_stories">Stories</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{order}} header_nav_link" href="/Nd/ad_order">Order</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{reservation}} header_nav_link" href="/Nd/ad_reservation">Reservation</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                          <a class="nav-link font-weight-bold {{catering}} header_nav_link" href="/Nd/ad_catering">Catering</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{message}} header_nav_link" href="/Nd/ad_message">Message</a>
-                      </li>
-                      <li class="nav-item mx-sm-1">
-                        <a class="nav-link font-weight-bold {{user}} header_nav_link" href="/Nd/ad_user">User</a>
-                      </li>
-                  </ul>
-            </div>
-        </nav>
-    </div>
+<div class="container d-flex justify-content-center">
+    <a href="/Nd/admin" class="btn btn-danger" id="Header"><span class="fa fa-home p-2"></span></a>
 </div>
