--- a/Restaurant/static/css/Reservation.css
+++ b/Restaurant/static/css/Reservation.css
@@ -131,9 +131,16 @@
     background-color: transparent;
     border: 2px solid rgb(0, 0, 187);
 }
-#Card h4
+#Card h4, .help-block
 {
-    color: rgb(0, 40, 187);
     font-family: cursive;
+}
+.help-block, .success_message
+{
+    color: rgb(0, 187, 40);
+}
+.error_message, .help-block
+{
+    color: red;
 }
 /*====================Reservation====================*/
